<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">
    <ImageView
        android:id="@+id/imLogo"
        android:alpha="0"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logos"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/textLogin"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/message_login"
        android:textColor="@color/blue_900"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imLogo" />

    <TextView
        android:id="@+id/txEmail"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textColor="@color/blue_900"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin" />

    <com.dicoding.intermediate.submissionstoryapp.ui.custom.EmailEdText
        android:id="@+id/ed_login_email"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="16dp"
        android:shadowColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txEmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txPassword"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/blue_900"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

    <com.dicoding.intermediate.submissionstoryapp.ui.custom.PasswordEdText
        android:id="@+id/ed_login_password"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_password"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txPassword" />

    <Button
        android:id="@+id/buttonLog"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue_900"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ed_login_password"
        app:layout_constraintStart_toStartOf="@+id/ed_login_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

    <TextView
        android:id="@+id/intRegister"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dont_have_account"
        android:textColor="@color/blue_900"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonLog"
        app:layout_constraintStart_toStartOf="@+id/buttonLog"
        app:layout_constraintTop_toBottomOf="@+id/buttonLog" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>