<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailstory.DetailStoryActivity">

    <ImageView
        android:id="@+id/ivprofile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/preview"/>

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center_vertical|start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivprofile"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="0dp"
        android:layout_height="255dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:scaleType="centerCrop"
        android:transitionName="photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo">

        <TextView
            android:id="@+id/tv_detail_created_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:paddingRight="12dp"
            android:paddingBottom="6dp"
            android:text="@string/created_date"
            android:textColor="@color/gray_800"
            android:textSize="11sp"
            android:textStyle="italic"
            android:transitionName="story_upload_time" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:fontFamily="sans-serif"
            android:lineHeight="25dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:transitionName="story_description"
            tools:targetApi="p" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>